# fanctrlrs

./: .gitignore  .travis.yml  Cargo.toml  Config.toml.wnotify  Config.toml.wonotify  README.md  fanctrlrs.service  fanctrlrs@.service
src/: main.rs
