[package]
name = "fanctrlrs"
version = "0.1.1"
authors = ["Andrea Stevanato <andrea.stevanato.95@hotmail.it>"]
edition = "2018"
description = "Raspberry cpu temperature regulator through a fan that acts at a certain threshold."

[dependencies]
rust_gpiozero = "0.2"
reqwest = "0.9"
signal-hook = "0.1"
failure = "0.1"
serde = { version = "1.0", features = ["derive"]}
toml = "0.5"
structopt = "0.2"

[features]
notify = []
